--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,9 +24,9 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'test'
-    projects: '**/*.csproj'
+    projects: '**/*.Test.csproj'
     testRunTitle: 'Asp.net-web-API-CI-CD.Test'
-    
+
 - task: VSBuild@1
   inputs:
     solution: '$(solution)'
