--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,3 +34,12 @@ steps:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
 
+- task: DotNetCoreCLI@2
+ inputs:
+ command: publish
+ publishWebProjects: false
+ arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
+ zipAfterPublish: True 
+
+- task: PublishBuildArtifacts@1
+ displayName: 'publish artifacts'
