--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ steps:
 - task: DotNetCoreCLI@2
  inputs:
  command: publish
- publishWebProjects: false
+ publishWebProjects: False
  arguments: '--configuration $(BuildConfiguration) --output $(Build.ArtifactStagingDirectory)'
  zipAfterPublish: True 
 
